--- a/.github/workflows/FREE-rdp.yml
+++ b/.github/workflows/FREE-rdp.yml
@@ -23,12 +23,12 @@ jobs:
       run: |
         curl -fsSL https://tailscale.com/install.ps1 | powershell -
 
-    - name: Connect Tailscale
+    - name: Connect Tailscale (FIXED)
       run: |
-        tailscale up --authkey $env:TAILSCALE_AUTHKEY --hostname github-rdp
+        "C:\Program Files\Tailscale\tailscale.exe" up --authkey $env:TAILSCALE_AUTHKEY --hostname github-rdp
 
     - name: Show RDP Info
       run: |
-        tailscale ip -4
+        "C:\Program Files\Tailscale\tailscale.exe" ip -4
         echo "Username: rdpuser"
         echo "Password: StrongPass@123"
